# library-api

./: .env.example  .gitignore  alembic.ini  docker-compose.yml  library_er_diagram.drawio  logging_config.yaml  main.py  pyproject.toml  ruff.toml
app/: main.py
app/api/v1/: books.py
app/repository/: books.py
app/schemas/: book_shema.py
app/service/: books.py
docs/: library_db_diagram.drawio  requerments.md
src/library_api/: interface.py  types.py
src/library_api/application/books/: create.py  get_all.py  get_by_name.py
src/library_api/application/users/: create.py  get_all.py
src/library_api/config/: models.py  parsers.py
src/library_api/db/: temp.py
src/library_api/db/migration/: env.py
src/library_api/db/migration/versions/: 2db37ccba0b4_init.py  a393a6224d7e_add_password_and_email_in_user.py
src/library_api/db/models/: __init__.py  book.py  book_cabinet.py  books.py  cabinet.py  cabinets.py  office.py  offices.py  user.py  user_book.py  users.py
src/library_api/db/repositories/: book.py  cabinet.py  office.py  user.py
src/library_api/di/: __init__.py  config.py  db.py  interactors.py
src/library_api/dtos/: book.py  book_cabinet.py  cabinet.py  office.py  user.py  user_book.py
src/library_api/exceptions/: base.py  book.py  cabinet.py  office.py  user.py
src/library_api/log/: log_filters.py
src/library_api/main/: web.py
src/library_api/presentation/web/v1/routes/: __init__.py  auth.py  book.py  (+2 more)
src/library_api/retorts/: book.py  book_cabinet.py  cabinet.py  office.py  user.py  user_book.py
src/library_api/security/: jwt_utils.py
