[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "library-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dishka>=1.9.1",
    "environs>=15.0.0",
    "fastapi[standart]>=0.135.2",
    "uvicorn>=0.42.0",
]

[project.scripts]
api = "library_api.main.web:run"
