[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "library-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adaptix>=3.0.0b12",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "dishka>=1.9.1",
    "environs>=15.0.0",
    "fastapi[standart]>=0.135.2",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.42.0",
]

[project.scripts]
api = "library_api.main.web:run"

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "ruff>=0.15.10",
]

[tool.mypy]
files = ["src/library_api"]
strict = true
python_version = "3.12"
strict_bytes = true
local_partial_types = true
plugins = ["pydantic.mypy"]

